Fix nav link z-index.

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -78,6 +78,7 @@ nav {
         left: 0;
         width: 100%;
         height: 100%;
+        z-index: 21;
       }
 
       a.nav {
@@ -275,7 +276,7 @@ article.pop-out.dropdown {
   height: 83%;
   font-size: 20px;
   background: #eee;
-  z-index: 15;
+  z-index: 50;
   box-shadow: 0px 5px 10px rgba(109, 109, 109, 0.7);
 
   div.content {
@@ -321,7 +322,7 @@ div.cover {
     width: 100%;
     height: 100%;
     background: rgba(109, 109, 109, 0.5);
-    z-index: 14;
+    z-index: 49;
   }
 }
 
